package command;


message SecurityCommand
{
	enum SecurityCommandType
	{
		JOIN = 0;
		LEAVE = 1;
	}
	required SecurityCommandType type = 1;

	optional string UUID = 2;
}
